finished bulk of magnetostatik, adds minor changes and corrections to elektrostatik

--- a/preamble/commands.tex
+++ b/preamble/commands.tex
@@ -23,3 +23,5 @@
 \newcommand{\frr}[1][1]{\frac{#1}{\abs{\vb*r-\vb*r'}}}
 \newcommand{\Y}{Y_{lm}(\Omega)}
 \newcommand{\Ya}{Y_{lm}(\Omega')}
+
+\newcommand{\vint}[1][]{\int_{#1}\,d^3r}
