--- a/subtex/elektrostatik/randflaechen.tex
+++ b/subtex/elektrostatik/randflaechen.tex
@@ -21,7 +21,7 @@ Zunächst wiederholen wir wie die Sätze mathematisch ganz
 allgemein aussehen.\\
 
 \noindent
-Sei $V\subset \mathbb{R}^n$ eine Kompakte Menge mit glattem Rand 
+Sei $V\subset \mathbb{R}^3$ eine Kompakte Menge mit glattem Rand 
 $\partial V$ mit ein nach äußeren orientierten Normaleneinheitsvektor 
 $\vb*n$ bzw. Flächen Element $d\vb A =  \vb*n dA$. Sei ferner das Vektorfeld
 $\vb F$ stetig differenzierbar auf einer offenen Menge $U$ 
@@ -36,7 +36,7 @@ integriert über ein Volumen $V$ proportional zur Flußintegrals
 des Feldes durch der Randfläche des Volumen $\partial V$.\\
 
 \noindent
-Sei $A\subset \mathbb{R}^n$ eine einfach zusammenhängende Fläche mit
+Sei $A\subset \mathbb{R}^2$ eine einfach zusammenhängende Fläche mit
 glattem Randkurve $\partial A$ (die gegen dem Urzeigersinn durchlaufen 
 wird beim Integrieren). Sei ferner das Vektorfeld
 $\vb F$ stetig differenzierbar auf einer offenen Menge $U$ 
