--- a/preamble/commands.tex
+++ b/preamble/commands.tex
@@ -14,9 +14,27 @@
 \newcommand{\del}[1]{\partial_{#1}}
 \newcommand{\const}{\mathrm{const.}}
 \newcommand{\green}[1][]{G_{#1}(\vb*r,\vb*r')}
+\newcommand{\greent}[1][]{G_{#1}(\vb*r-\vb*r',t-t')}
+\newcommand{\fgreent}[1][]{G_{#1}(\vb*k,\omega)}
 \newcommand{\dA}{d\vb A}          % dA surface differential (vector)
 \newcommand{\ddA}{\cdot d\vb A}   % *dA surface differential (vector)
 \newcommand{\vr}{\vb*r}           % r vector
+\newcommand{\vk}{\vb*k}           % k vector
+\newcommand{\vj}{\vb*j}           % j vector
+\newcommand{\vjr}{\vb*j(\vr)}     % j vector with r
+\newcommand{\vjrt}{\vb*j(\vr, t)} % j vector with r, t
+\newcommand{\vE}{\vb E}           % E vector
+\newcommand{\vEr}{\vb E(\vr)}     % E vector with r
+\newcommand{\vErt}{\vb E(\vr, t)} % E vector with r, t
+\newcommand{\vB}{\vb B}           % B vector
+\newcommand{\vBr}{\vb B(\vr)}     % B vector with r
+\newcommand{\vBrt}{\vb B(\vr, t)} % B vector with r, t
+\newcommand{\vH}{\vb H}           % H vector
+\newcommand{\vHr}{\vb H(\vr)}     % H vector with r
+\newcommand{\vHrt}{\vb (\vr, t)H} % H vector with r, t
+\newcommand{\vM}{\vb M}           % M vector
+\newcommand{\vMr}{\vb M(\vr)}     % M vector with r
+\newcommand{\vMrt}{\vb (\vr, t)M} % M vector with r, t
 % |r-r'|
 \newcommand{\rr}{\abs{\vb*r-\vb*r'}}
 % 1/|r-r'| with option to replace 1/... with x/...
@@ -25,3 +43,9 @@
 \newcommand{\Ya}{Y_{lm}(\Omega')}
 
 \newcommand{\vint}[1][]{\int_{#1}\,d^3r}
+
+\newcommand{\pt}{\partial_t}
+
+\newcommand{\trot}{\mathrm{rot}\,}
+\newcommand{\tdiv}{\mathrm{div}\,}
+\newcommand{\tgrad}{\mathrm{grad}\,}
