--- a/preamble/packages.tex
+++ b/preamble/packages.tex
@@ -10,9 +10,11 @@
 \usepackage{bm}
 \usepackage{graphicx}
 \usepackage{mathtools}
+\usepackage{amssymb}
 \usepackage{cancel}
 \usepackage{wrapfig}
 \usepackage{float}
 \usepackage{chngcntr}
 \usepackage{multicol}
 \usepackage{makecell}
+\usepackage{minitoc} 
