--- a/subtex/magnetostatik.tex
+++ b/subtex/magnetostatik.tex
@@ -26,4 +26,8 @@ kurz alle wichtige Themen besprechen ohne Herleitungen zu wiederholen.
 \input{\subtexdir/magnetostatik/randwertprobleme.tex}
 
 \newpage
+\section{Ohmsches Gesetz}%
+\label{sec:ohmsches-gesetz}
+
+\newpage
 \section{Formelzettel}%
