added energie des elektromagnetischen Feldes

--- a/preamble/commands.tex
+++ b/preamble/commands.tex
@@ -18,7 +18,9 @@
 \newcommand{\fgreent}[1][]{G_{#1}(\vb*k,\omega)}
 \newcommand{\dA}{d\vb A}          % dA surface differential (vector)
 \newcommand{\ddA}{\cdot d\vb A}   % *dA surface differential (vector)
+\newcommand{\dds}{\cdot d\vb*s}   % *dA surface differential (vector)
 \newcommand{\vr}{\vb*r}           % r vector
+\newcommand{\vv}{\vb*v}           % r vector
 \newcommand{\vk}{\vb*k}           % k vector
 \newcommand{\vj}{\vb*j}           % j vector
 \newcommand{\vjr}{\vb*j(\vr)}     % j vector with r
@@ -31,10 +33,13 @@
 \newcommand{\vBrt}{\vb B(\vr, t)} % B vector with r, t
 \newcommand{\vH}{\vb H}           % H vector
 \newcommand{\vHr}{\vb H(\vr)}     % H vector with r
-\newcommand{\vHrt}{\vb (\vr, t)H} % H vector with r, t
+\newcommand{\vHrt}{\vb H(\vr, t)} % H vector with r, t
 \newcommand{\vM}{\vb M}           % M vector
 \newcommand{\vMr}{\vb M(\vr)}     % M vector with r
-\newcommand{\vMrt}{\vb (\vr, t)M} % M vector with r, t
+\newcommand{\vMrt}{\vb M(\vr, t)} % M vector with r, t
+\newcommand{\vS}{\vb S}           % M vector
+\newcommand{\vSr}{\vb S(\vr)}     % M vector with r
+\newcommand{\vSrt}{\vb S(\vr, t)} % M vector with r, t
 % |r-r'|
 \newcommand{\rr}{\abs{\vb*r-\vb*r'}}
 % 1/|r-r'| with option to replace 1/... with x/...
