--- a/subtex/elektrodynamik.tex
+++ b/subtex/elektrodynamik.tex
@@ -10,23 +10,29 @@
 \newpage
 \section{Energie des Elektromagnetischen Feldes}%
 \label{sec:energie-EM-feld}
+\input{\subtexdir/elektrodynamik/em-feldenergie.tex}
 
 \newpage
 \section{Wellengleichung der Potentiale}%
-\label{sec:Wellengleichung-}
+\label{sec:pot-wellengleichung}
+\input{\subtexdir/elektrodynamik/pot-wellengleichung.tex}
 
 \newpage
 \section{Bewegte und Beschleunigte Ladungen}%
 \label{sec:Bewegte und Beschleunigte Ladungen}
+\input{\subtexdir/elektrodynamik/bewegte-ladungen.tex}
 
 \newpage
 \section{Wellenleiter}%
 \label{sec:Wellenleiter}
+\input{\subtexdir/elektrodynamik/wellenleiter.tex}
 
 \newpage
 \section{Wellenpaketen}%
 \label{sec:Wellenpaketen}
+\input{\subtexdir/elektrodynamik/wellenpaket.tex}
 
 \newpage
 \section{Elektrodynamik in Materie}%
 \label{sec:Elektrodynamik in Materie}
+\input{\subtexdir/elektrodynamik/em-materie.tex}
